<resources>
    <string name="app_name">GeoChallenge</string>
    <string name="start_limit_distance_game">Game for distance</string>
    <string name="table_records">Best Results</string>
    <string name="mode">Russia</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="logout">Exit</string>
    <string name="settings">Settings</string>
    <string name="level_d_text" translatable="false">%1$d,\u0020</string>
    <string name="task_counter_text" translatable="false">%1$d/</string>
    <string name="distance_info">Until city %1$s</string>
    <string name="timer_info">%d seconds left</string>
    <string name="answer_exit">Are You sure want to exit?</string>
    <string name="game_is_finished">Game Over</string>
    <string name="result_game_message_with_congratulations">Congratulations! You have new best result! Your score is %1$d</string>
    <string name="result_game_message">Your score is %1$d</string>

    <string name="solo_title">Solo</string>
    <string name="solo_subtitle">Game for points</string>

    <string name="time_title">TimeTrial</string>
    <string name="time_subtitle">Game for time</string>

    //!!!
    <string name="immortal_title">Immortal</string>
    <string name="immortal_subtitle">God mode</string>
    <string name="result_game_message_level_are_over">End of levels</string>


    <string name="hungred_title">Fatal 100</string>
    <string name="hungred_subtitle">Hardcore mode</string>


    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="ok" translatable="false">OK</string>
    <string name="get_registered">Registration</string>
    <string name="are_already_registered">Already registered?</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="username_hint">Your Nickname</string>
    <string name="login">Enter</string>
    <string name="register">Registration</string>
    <string name="i_forgot_password">Forgot password?</string>
    <string name="or">OR</string>


    <!-- pref lang tasks -->
    <string name="pref_lang_tasks_title">Geo Name language</string>
    <string name="pref_lang_tasks_summary">Setup language for Geo Names</string>
    <string name="pref_lang_tasks_dialog_title">Select language for Geo Names</string>

    <string name="update">Refresh</string>
    <string name="cv_img_desc" translatable="false">CardView Image Background</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_ru">Russian</string>
    <string name="level">Level:</string>
    <string name="next">Next</string>
    <string name="lang_interface">Interface Language</string>
    <string name="map_image_desc" translatable="false">Map Image</string>
    <string name="try_again">Try again</string>
    <string name="replay">Restart</string>
    <string name="exit">Exit</string>
    <string name="pts" translatable="false">PTS</string>
    <string name="plus" translatable="false">plus</string>
    <string name="minus" translatable="false">minus</string>

    <string name="error">Error</string>

    <!-- auth warnings-->
    <string name="auth_error_connection">Can\'t connect. Check internet connection</string>
    <string name="auth_error_too_many_requests">Too many requests. Try again later</string>
    <string name="auth_error">Can\'t authorize. Try again later</string>
    <string name="enter_your_email">Insert Your Email</string>
    <string name="enter_your_password">Insert Your Password</string>
    <string name="enter_your_username">Insert Your Nickname</string>
    <string name="short_password_warning">6 symbols is minimum</string>
    <string name="email_is_not_correct">Incorrect Email</string>
    <string name="password_is_not_correct">Incorrect Password</string>
    <string name="invalid_user_warning">No user with this Email</string>
    <string name="to_many_requests_warning">Too many requests. Try again later</string>
    <string name="email_already_in_use_warning">User with this Email already exist</string>
    <string name="username_already_in_use_warning">Nickname %1$s already exist</string>
    <string name="username_too_long_warning">Nickname must be no longer than 30 characters</string>
    <string name="exception_characters_for_username_warning">Nickname should not contain : \"/\\ \'</string>

    <!-- game errors-->
    <string name="game_error_connection">No connection. Check if internet available</string>
    <string name="game_error_finish_game">Can\'t save Your score. Check internet connection</string>
    <string name="game_error_server">Can\'t connect</string>
    <string name="game_error_any">Something wrong. Try to refresh or restart game</string>
    <string name="game_warning_internet_is_not_available">No Internet Access</string>
    <string name="of" translatable="false">/</string>
    <string name="zero" translatable="false">0</string>
    <string name="until">Until point:</string>
    <string name="ptsNextLvl" translatable="false">5000</string>
    <string name="maptext" translatable="false">mapText</string>
    <!-- menu error   -->
    <string name="menu_error">Cannot load maps. Check internet connection or relaunch game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="submit_new_password_link">Submit New Password Link</string>
    <string name="time_is_over">Time is over</string>
    <string name="about">About</string>
    <string name="about_solo">Score as many points as you can.\nFor the next level you need at least 2500 points.\nPoints count for speed and accuracy.\nMax points you can score at level: 5000.\n13 seconds to act.\nMax points at location for accuracy is: 800.\nMax points at location for speed is: 200.\nAnswer radius:\n-World: 1000 km\n-Capitals, USA, Russia: 800 km.\n-Germany, India, Japan, UK, Spain: 200 km.\n-Mexico: 250 km.\n-China, Brazil: 300 km.\n-Saint-Petersburg: 1 km.</string>
    <string name="about_time">Try to guess as many location as you can for a limited time game.\nTime is added or subtrаcted based on your accuracy.\nStart limit is: 30 secs For accurate guessing location: +10 secs For incorrect guessing: -10 secs\nAnswer radius:\n-World: 1000 km\n-Capitals, USA, Russia: 800 km.\n-Germany, India, Japan, UK, Spain: 200 km.\n-Mexico: 250 km.\n-China, Brazil: 300 km.\n-Saint-Petersburg: 1 km.</string>
    <string name="about_immortal">Play any map in God Mode.\nNo time for answer, no leaderboard, no score.\nTest your skill and enjoy the ride.</string>
    <string name="about_fatal">Hardcore mode.\n13 seconds to act, but if Your answer radius bigger than 100 km - instant game over</string>
    <string name="about_version">Application Version</string>
    <string name="about_main">A game for the development of your geographical intuition. Guess cities and attractions on the map of the whole world. Get competiton with your friends in leaderboard and various modes. Challenge yourself on the world map by guessing over 8,000 locations!</string>
    <string name="about_devs_text">Developers</string>
    <string name="about_devs" translatable="false">Rexedead and Danbi</string>
    <string name="_1" translatable="false">1.</string>
    <string name="_3" translatable="false">3.</string>
    <string name="_2" translatable="false">2.</string>
    <string name="dots" translatable="false">...</string>
    <string name="translators" translatable="false">CZ - Bratr Doubek</string>
    <string name="translators_text">Překladatelé</string>

</resources>
