<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_navigation"
    app:startDestination="@+id/nav_solo">

    <fragment
        android:id="@+id/nav_solo"
        android:name="ru.geochallengegame.app.ui.menu.ClassicMapsFragment"
        android:label="@string/solo_title"
        tools:layout="@layout/fr_menu_maps" />

    <fragment
        android:id="@+id/nav_time"
        android:name="ru.geochallengegame.app.ui.menu.TimeMapsFragment"
        android:label="@string/time_title"
        tools:layout="@layout/fr_menu_maps" />
    <fragment
        android:id="@+id/nav_immortal"
        android:name="ru.geochallengegame.app.ui.menu.ImmortalMapsFragment"
        android:label="@string/immortal_title"
        tools:layout="@layout/fr_menu_maps" />

    <fragment
        android:id="@+id/nav_hungred"
        android:name="ru.geochallengegame.app.ui.menu.HungredMapsFragment"
        android:label="@string/immortal_title"
        tools:layout="@layout/fr_menu_maps" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.geochallengegame.app.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fr_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="ru.geochallengegame.app.ui.menu.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fr_about" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="ru.geochallengegame.app.ui.menu.SignOutActionFragment"
        android:label="@string/logout"
        tools:layout="@layout/fr_about" />

</navigation>