<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lang_interface"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_en" />

        <RadioButton
            android:id="@+id/radio_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_ru" />
    </RadioGroup>

</LinearLayout>