<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/GeoAuth"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:text="@string/app_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/or" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="36dp"
            android:layout_toStartOf="@id/tvText"
            android:background="@color/colorBgLight" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="36dp"
            android:layout_toEndOf="@id/tvText"
            android:background="@color/colorBgLight" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/GeoAuthTextInputLayout"
        app:errorIconDrawable="@null"
        app:boxStrokeErrorColor="@color/colorAccentLight"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInputEditText"
            style="@style/GeoAuthTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        style="@style/GeoAuthTextInputLayout"
        android:id="@+id/passwordInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            style="@style/GeoAuthTextInputEditText"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/loginBtn"
            style="@style/GeoButtonsAuth"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/registerBtn"
            style="@style/GeoButtonsAuth"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:text="@string/register" />
    </LinearLayout>

    <Button
        android:text="@string/i_forgot_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/forgotPasswordBtn"
        style="@style/GeoButtonsAuth"
        android:layout_marginBottom="8dp" />


</LinearLayout>



